dati-semantic-csv-api/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dati-semantic-csv-api
  namespace: ndc-dev
  labels:
    application: dati-semantic-csv-api
spec:
  host: vocabularies-api-ndc-dev.apps.cloudpub.testedev.istat.it
  to:
    kind: Service
    name: dati-semantic-csv-api
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status:
  ingress: []
